Changelog for GEMC
==================

5/1/17
 - prepending "g" to all library names to avoid potential conflicts with other external packages
 - fixed cases where the hit collection may be empty, for example by geant4 messenger command hits/inactivate
 - added identifier definitions for new detector type: Counter
 - added bank definitions for new detector type: Counter
 - added counter hit process to store the multiplicity of these particles::

   - gamma     
   - ep        
   - em        
   - pip       
   - pim       
   - pi0       
   - kp        
   - km        
   - k0        
   - proton    
   - neutron   
   - optphoton 

 - the counter sensitivity and id are defined the same way as the flux detector.
 - the output bank will have the number of each particles that goes through the sensitive detector.
 - making sure we do not count the same track twice

4/20/17
 - added optional argument (appended at the end) to BEAM_P: "KE" can specify that the momentum is kinematic energy instead.
   For example, to simulate a K=250 MeV proton::

   -BEAM_P="proton, 250*MeV, 90*deg, 90*deg, KE"


4/18/17
 - clearing user information for custom generator - it was accumulating each event.

4/13/17
 - added documentation for processID multihit sharing

4/12/17
 - added flux-type bank to mirror bank

4/3/17
 - M. Holtrop: fixed vertex spread

3/24/17
 - added eic routines in gemc hit processes

3/10/17
 - routine to set generated particle from input file more general
 - reading beagle format
 - writing out generator header and particle info in a separated entry in the generated particles bank

3/9/17
 - added beagle open file in primary generator for ascii
 - stopping run manager if no more events in the LUND or BEAGLE format
 - if:

   * gemc in in batch mode;
   * N is not set explicitely;
   * an external input file is used

   Then gemc will run through all the events in the input file.


3/7/17
 - added linear interpolation for dipole fields